--- a/data/main_data_generator.ipynb
+++ b/data/main_data_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,157 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Libertarian' 'Anarchism' 'socialism' 'progressive' 'Conservative'\n",
+      " 'americanpirateparty' 'democrats' 'Liberal' 'Republican'\n",
+      " 'LibertarianLeft' 'Liberty' 'Anarcho_Capitalism' 'alltheleft' 'neoprogs'\n",
+      " 'labor' 'blackflag' 'GreenParty' 'democracy' 'IWW' 'Marxism'\n",
+      " 'Objectivism' 'LibertarianSocialism' 'Capitalism' 'feminisms'\n",
+      " 'republicans' 'Egalitarianism' 'anarchafeminism' 'SocialDemocracy'\n",
+      " 'Postleftanarchism' 'AnarchoPacifism' 'conservatives' 'voluntarism'\n",
+      " 'PirateParty' 'Anarchist' 'Communist']\n",
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "# columns subreddit\n",
+    "subreddits = all_df['subreddit'].unique()\n",
+    "print(subreddits)\n",
+    "print(len(subreddits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Libertarian' 'Anarchist' 'socialism' 'progressive' 'Conservative'\n",
+      " 'PirateParty' 'democrats' 'Liberal' 'Republican' 'LibertarianLeft'\n",
+      " 'Liberty' 'Anarcho_Capitalism' 'alltheleft' 'neoprogs' 'labor'\n",
+      " 'blackflag' 'GreenParty' 'democracy' 'IWW' 'Marxism' 'Objectivism'\n",
+      " 'LibertarianSocialism' 'Capitalism' 'feminisms' 'Egalitarianism'\n",
+      " 'anarchafeminism' 'SocialDemocracy' 'Postleftanarchism' 'AnarchoPacifism'\n",
+      " 'conservatives' 'voluntarism' 'Communist']\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Republican, republicans \n",
+    "all_df.loc[all_df['subreddit'] == 'republicans', 'subreddit'] = 'Republican'\n",
+    "\n",
+    "# Anarchism, Anarchist\n",
+    "all_df.loc[all_df['subreddit'] == 'Anarchism', 'subreddit'] = 'Anarchist'\n",
+    "\n",
+    "# americanpirateparty, PirateParty\n",
+    "all_df.loc[all_df['subreddit'] == 'americanpirateparty', 'subreddit'] = 'PirateParty'\n",
+    "\n",
+    "subred_rows = all_df['subreddit'].unique()\n",
+    "print(subred_rows)\n",
+    "print(len(subred_rows))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conservative            220\n",
+      "Libertarian             206\n",
+      "Anarcho_Capitalism      204\n",
+      "Anarchist               203\n",
+      "socialism               202\n",
+      "Republican              173\n",
+      "conservatives           127\n",
+      "democrats               122\n",
+      "progressive             115\n",
+      "Liberal                 112\n",
+      "GreenParty              112\n",
+      "alltheleft              111\n",
+      "SocialDemocracy          98\n",
+      "Capitalism               87\n",
+      "Objectivism              60\n",
+      "blackflag                47\n",
+      "Marxism                  39\n",
+      "feminisms                35\n",
+      "labor                    32\n",
+      "democracy                27\n",
+      "LibertarianSocialism     21\n",
+      "IWW                      18\n",
+      "LibertarianLeft          14\n",
+      "Egalitarianism           10\n",
+      "Postleftanarchism         6\n",
+      "PirateParty               6\n",
+      "neoprogs                  5\n",
+      "AnarchoPacifism           4\n",
+      "Liberty                   3\n",
+      "anarchafeminism           2\n",
+      "Communist                 1\n",
+      "voluntarism               1\n",
+      "Name: subreddit, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate how many post exist for each subreddit\n",
+    "subred_count = all_df['subreddit'].value_counts()\n",
+    "print(subred_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conservative          220\n",
+      "Libertarian           206\n",
+      "Anarcho_Capitalism    204\n",
+      "Anarchist             203\n",
+      "socialism             202\n",
+      "Republican            173\n",
+      "conservatives         127\n",
+      "democrats             122\n",
+      "progressive           115\n",
+      "Liberal               112\n",
+      "GreenParty            112\n",
+      "alltheleft            111\n",
+      "SocialDemocracy        98\n",
+      "Capitalism             87\n",
+      "Objectivism            60\n",
+      "Name: subreddit, dtype: int64\n",
+      "(2152, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter out subreddits with less than 50 posts from the main dataframe\n",
+    "all_df = all_df[all_df['subreddit'].isin(subred_count.index[subred_count > 50])]\n",
+    "subred_count = subred_count[subred_count > 50]\n",
+    "print(subred_count)\n",
+    "print(all_df.shape)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -61,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +235,7 @@
       "7     [Do, you, believe, humanity, taking, collectiv...\n",
       "10    [I, hear, in, the, media, on, how, the, climat...\n",
       "Name: selftext, dtype: object\n",
-      "(792, 9)\n"
+      "(657, 9)\n"
      ]
     },
     {
@@ -116,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +280,7 @@
       "2  [Just, like, the, title, says,, I, wonder, why...  text  Libertarian\n",
       "3  [Do, you, believe, humanity, taking, collectiv...  text  Libertarian\n",
       "4  [I, hear, in, the, media, on, how, the, climat...  text  Libertarian\n",
-      "(792, 3)\n"
+      "(657, 3)\n"
      ]
     }
    ],
@@ -146,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -180,31 +331,31 @@
       "2  1.654527e+09  \n",
       "3  1.656602e+09  \n",
       "4  1.652641e+09  \n",
-      "(2254, 9)\n",
+      "(2022, 9)\n",
       "0       [What, is, the, Libertarian, solution, to, cli...\n",
       "1       [Prof, Anastasios, Tsonis:, University, of, Wi...\n",
       "2       [Three, Supreme, Court, cases, to, watch, beyo...\n",
       "3       [Supreme, Court, limits, EPA’s, power, to, com...\n",
       "4       [A, green, libertarian, perspective:, is, bad,...\n",
       "                              ...                        \n",
-      "199     [Why, don't, we, treat, climate, change, with,...\n",
       "499     [Judicial, Watch, files, lawsuit, to, obtain, ...\n",
       "915     [The, Paris, Climate, Agreement, Won't, Change...\n",
+      "1015    [Global, climate, change, -, Sobriety, not, au...\n",
       "1187    [Ahead, of, UN, summit,, leading, scientists, ...\n",
       "1632    [Climate, Misanthropes, Say, Fighting, Climate...\n",
-      "Name: title, Length: 2254, dtype: object\n",
+      "Name: title, Length: 2022, dtype: object\n",
       "0       [What, is, the, Libertarian, solution, to, cli...\n",
       "1       [Prof, Anastasios, Tsonis:, University, of, Wi...\n",
       "2       [Three, Supreme, Court, cases, to, watch, beyo...\n",
       "3       [Supreme, Court, limits, EPA’s, power, to, com...\n",
       "4       [A, green, libertarian, perspective:, is, bad,...\n",
       "                              ...                        \n",
-      "199     [Why, don't, we, treat, climate, change, with,...\n",
       "499     [Judicial, Watch, files, lawsuit, to, obtain, ...\n",
       "915     [The, Paris, Climate, Agreement, Won't, Change...\n",
+      "1015    [Global, climate, change, -, Sobriety, not, au...\n",
       "1187    [Ahead, of, UN, summit,, leading, scientists, ...\n",
       "1632    [Climate, Misanthropes, Say, Fighting, Climate...\n",
-      "Name: title, Length: 2254, dtype: object\n"
+      "Name: title, Length: 2022, dtype: object\n"
      ]
     }
    ],
@@ -238,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +402,14 @@
       "2  [Just, like, the, title, says,, I, wonder, why...  title  Libertarian\n",
       "3  [Do, you, believe, humanity, taking, collectiv...  title  Libertarian\n",
       "4  [I, hear, in, the, media, on, how, the, climat...  title  Libertarian\n",
-      "(792, 3)\n",
+      "(657, 3)\n",
       "                                               claim  type    subreddit\n",
       "0  [It’s, coming, so, we, got, to, be, prepared, ...  text  Libertarian\n",
       "1  [I, consider, myself, a, believer, in, what, i...  text  Libertarian\n",
       "2  [Just, like, the, title, says,, I, wonder, why...  text  Libertarian\n",
       "3  [Do, you, believe, humanity, taking, collectiv...  text  Libertarian\n",
       "4  [I, hear, in, the, media, on, how, the, climat...  text  Libertarian\n",
-      "(1584, 3)\n"
+      "(1314, 3)\n"
      ]
     }
    ],
@@ -280,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
